[tool.poetry]
name = "faq-bot"
version = "0.1.0"
description = ""
authors = ["Han donghun <toyou4203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, < 3.13"
langchain = "^0.3.15"
langsmith = "^0.3.1"
langchain-openai = "^0.3.2"
pip = "^24.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
